--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
        <nav class="navbar navbar-expand-lg bg-transparent navbar-dark">
   <div class="container-fluid">
     <!-- Brand -->
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand fs-1" href="#">
     
       Wild Beans
     </a>
@@ -99,4 +99,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
 </body>
 </html>
+
 
